Deployment from Statiq

--- a/release-notes/nextrelease.html
+++ b/release-notes/nextrelease.html
@@ -401,6 +401,7 @@
 <h3 id="push-azure-notification-hubs">Push - Azure Notification Hubs</h3>
 <ul>
 <li>[Fix] ANH can often fail with &quot;Microsoft.Azure.NotificationHubs.Messaging.MessagingEntityNotFoundException: Installation not found.TrackingId:XXXX&quot; for rapid calls (ie. RequestAccess immediately followed by SetTags)</li>
+<li>[Enhancement] You can now configure a timespan for when azure installations should expire if not used.</li>
 </ul>
 
                                 </div>
