Deployment from Statiq

--- a/release-notes/nextrelease.html
+++ b/release-notes/nextrelease.html
@@ -374,6 +374,11 @@
 <li>[Fix] ManagedScan.Start is now async to expose permission issues before starting the scan <a href="https://github.com/shinyorg/shiny/issues/698">GH-698</a></li>
 <li>[Fix] ManagedScan.Toggle has been moved to an extension method.,</li>
 </ul>
+<h3 id="beacons">Beacons</h3>
+<ul>
+<li>[Enhancement] Managed beacon ranging scan now has Start as async so permissions can be checked</li>
+<li>[Fix] ManagedBeacon result now includes the region identifier</li>
+</ul>
 <h3 id="locations">Locations</h3>
 <ul>
 <li>[Enhancement] GpsManager.GetCurrentPosition will start/stop the GPS tracking only if it wasn't started before</li>
